<resources>
    <string name="app_name">Pizza Boy</string>
    <string name="action_settings">Settings</string>
    <string name="action_main_settings">Settings</string>
    <string name="action_main_statistics">Statistics</string>
    <string name="action_main_new_shift">Start new shift</string>
    <string name="action_main_change_date">Change date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_shift_settings">Settings</string>
    <string name="action_end_shift">End Shift</string>
    <string name="action_new_delivery">New Delivery</string>
    <string name="title_activity_shift">ShiftActivity</string>
    <string name="title_activity_new_delivery"></string>
    <string name="action_refresh_location">Refresh Location</string>
    <string name="action_get_location_by_address">Location by Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="action_shift_statistics">Statistics</string>
    <string name="action_stop_location">Stop Location</string>
    <string name="action_statistics_clear">Clear</string>
    <string name="action_statistics_day_vs_tip">Day vs Average tip</string>
    <string name="action_statistics_distance_vs_tip">Distance vs Tip</string>
    <string name="action_statistics_cost_vs_tip">Cost vs Tip</string>
    <string name="action_statistics_heatmap">Heatmap</string>
    <string name="credit">Credit</string>
    <string name="new_shift">New Shift</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="resume_shift">Resume Shift</string>
    <string name="title_activity_shift_statistics">Shift Statistics</string>
    <string name="title_activity_main">Pizza Boy</string>
    <string name="shifts">Shifts</string>
    <string name="action_statistics_day_vs_tip_per_hour">Day vs Tip per hour</string>
    <string name="action_statistics_day_vs_deliveries_num">Day vs Deliveries Num</string>
    <string name="action_statistics_day_vs_deliveries_per_hour">Hour vs Deliveries</string>
    <string name="action_statistics_day_vs_tips_per_hour">Hour vs Tip</string>
    <string name="action_statistics_day_vs_average_tip">Day vs Average tip</string>
</resources>
